# ECOLENTES

./: .gitignore  app_config.py  database.py  main.py  pyproject.toml  requirements.txt
modules/: dashboard.py  doe.py  hildegard.py  login.py  reporting.py  smed.py  smed_doe.py  spaghetti.py
widgets/: __init__.py  editable_table.py  gauge.py  timer.py  top_bar.py
