[project]
name = "ecolentes-os"
version = "4.0.0"
description = "Ecolentes Industrial OS - Stunning Series"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "customtkinter",
    "matplotlib",
    "pillow",
]

[project.scripts]
app = "main:main"

[tool.setuptools.packages.find]
include = ["modules*", "widgets*"]
exclude = ["scratch*", "__pycache__*"]

[tool.setuptools]
py-modules = ["app_config", "database", "main"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
